# testcaseer

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  ci.yml  release.yml
src/testcaseer/: __init__.py  browser.py  cli.py  control_panel.py  events.py  models.py  recorder.py  screenshot.py
src/testcaseer/exporters/: __init__.py  base.py  html_exporter.py  json_exporter.py  markdown_exporter.py
src/testcaseer/templates/: report.html.j2  report.md.j2
tests/: __init__.py  conftest.py  test_cli.py  test_exporters.py  test_models.py  test_screenshot.py
tests/integration/: test_recorder.py
